--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nyt-top",
   "version": "1.0.2",
   "description": "A node.js wrapper for The New York Times Top Stories API v1",
-  "main": "nyt-top.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
